- Fixed bug #36427 (proc_open() / proc_close() leak handles on windows).